# fastapi_best_architecture_mini

./: .env.example  .gitignore  Dockerfile  Dockerfile.postgres  PROGRESS.md  README.md  docker-compose.yml  index.md  prompt.md  pyproject.toml  requirements.txt
backend/: .env  alembic.ini  main.py
backend/alembic/: env.py  jenkins
backend/alembic/versions/: 0a9b412fe3e6_initial_schema.py  e297599c34f0_add_ext_to_demo.py
backend/app/: router.py
backend/app/admin/model/: __init__.py  user.py
backend/app/admin/schema/: dept.py  role.py  user.py
backend/app/demo/api/: __init__.py  router.py
backend/app/demo/api/v1/: demo.py  demo_complex.py  document.py  location.py
backend/app/demo/crud/: __init__.py  crud_demo.py  crud_document.py  crud_location.py
backend/app/demo/model/: __init__.py  demo.py  document.py  location.py
backend/app/demo/schema/: __init__.py  demo.py  document.py  location.py
backend/app/demo/service/: __init__.py  demo_complex_service.py  demo_service.py  document_service.py  location_service.py
backend/common/: context.py  dataclasses.py  embeddings.py  enums.py  log.py  model.py  schema.py  soft_delete.py
backend/common/response/: response_code.py  response_schema.py
backend/common/security/: jwt.py
backend/core/: conf.py  path_conf.py  registrar.py
backend/database/: __init__.py  db.py  mongo.py
backend/doc/tech/数据库/: README.md  SQL日志配置.md  逻辑删除.md
backend/middleware/: access_middleware.py  jwt_auth_middleware.py
backend/tests/: __init__.py  test_snowflake.py
backend/tests/database/: __init__.py  test_complex_service.py  test_mongodb.py  test_redis.py
backend/utils/: serializers.py
doc/: 数据库.md  文件系统.md
doc/tech/: alembic.md  fastapi.md  python.md  雪花算法.md
docs/research/: 00_开源项目调研报告.md
docs/tech/: 01_技术选型说明.md  02_项目架构设计.md  03_接口规范文档.md  README.md
docs/tech/step/: 01_项目初始化.md
scripts/: docker-compose-database.yml  docker-compose-file.yml  env.md
scripts/database/: init_extensions.sql  psql.md
